--- a/content/TextualAnalysis_CNoZtF6D_AAAAQyZ.html
+++ b/content/TextualAnalysis_CNoZtF6D_AAAAQyZ.html
@@ -152,13 +152,13 @@ Problem Statement			</td>
     
   </head>
   <body style="color:#000000;font-weight:normal;font-size:22px;font-family:Dialog;margin-left:0;margin-right:0;">
-    <p style="margin-bottom:.0001pt;margin-top:0pt;margin-left:0pt;margin-right:0pt;">
+    <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
       <u><b>PRINT MASTER</b>&nbsp;</u>
     </p>
-    <p style="margin-bottom:.0001pt;margin-top:0pt;margin-left:0pt;margin-right:0pt;">
+    <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
       &nbsp;
     </p>
-    <p style="margin-bottom:.0001pt;margin-top:0pt;margin-left:0pt;margin-right:0pt;">
+    <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
       Generally, a client visits a print house with the specifications for a 
       print job and expects a <span bgcolor="#00ab9d" style="background-color:#00ab9d;">quote</span> 
       or an estimate for the proposed print job. The print house, based on 
@@ -171,36 +171,36 @@ Problem Statement			</td>
       this <span bgcolor="#00ab9d" style="background-color:#00ab9d;">work order</span> 
       should be saved for later reference.
     </p>
-    <p style="margin-bottom:.0001pt;margin-top:0pt;margin-left:0pt;margin-right:0pt;">
+    <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
       &nbsp;
     </p>
-    <p style="margin-bottom:.0001pt;margin-top:0pt;margin-left:0pt;margin-right:0pt;">
+    <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
       Data concerning available machinery on the print / work floor should be 
       documented and also saved on the <span bgcolor="#00aaed" style="background-color:#00aaed;">system</span> 
       since various parameters from these <span bgcolor="#00ab9d" style="background-color:#00ab9d;">print 
       machines</span> are required to aid in generating quotes.
     </p>
-    <p style="margin-bottom:.0001pt;margin-top:0pt;margin-left:0pt;margin-right:0pt;">
+    <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
       Various <span bgcolor="#00ab9d" style="background-color:#00ab9d;">materials</span> 
       are needed for day to day printing jobs in a print house like papers, <span bgcolor="#00ab9d" style="background-color:#00ab9d;">inks</span> 
       etc and should be documented and updated in an inventory.
     </p>
-    <p style="margin-bottom:.0001pt;margin-top:0pt;margin-left:0pt;margin-right:0pt;">
+    <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
       &nbsp;
     </p>
-    <p style="margin-bottom:.0001pt;margin-top:0pt;margin-left:0pt;margin-right:0pt;">
+    <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
       <i><b>Focus will be placed on the following set of requirements while 
       designing the <span bgcolor="#00aaed" style="background-color:#00aaed;">system</span>.</b>&nbsp;</i>
     </p>
-    <ol class="decimal" margin-left-ltr="50" margin-right-rtl="50" style="margin-bottom:0px;margin-top:0px;list-style-type:none;margin-left:40pt;">
-      <li style="margin-bottom:0;margin-top:0;margin-left:0;margin-right:0;">
+    <ol class="decimal" margin-left-ltr="50" margin-right-rtl="50" style="margin-top:0px;list-style-type:none;margin-left:40pt;margin-bottom:0px;">
+      <li style="margin-top:0;margin-left:0;margin-right:0;margin-bottom:0;">
         A <span bgcolor="#00aaed" style="background-color:#00aaed;">user</span> 
         in this context could either be an individual or a company and should 
         be able to either <span bgcolor="#ffff00" style="background-color:#ffff00;">create 
         an account</span> and <span bgcolor="#ffff00" style="background-color:#ffff00;">modify 
         an account</span> on the <span bgcolor="#00aaed" style="background-color:#00aaed;">system</span>
       </li>
-      <li style="margin-bottom:0;margin-top:0;margin-left:0;margin-right:0;">
+      <li style="margin-top:0;margin-left:0;margin-right:0;margin-bottom:0;">
         <i>Any <span bgcolor="#00aaed" style="background-color:#00aaed;">user</span> 
         on the <span bgcolor="#00aaed" style="background-color:#00aaed;">system</span> 
         should be able to <span bgcolor="#ffff00" style="background-color:#ffff00;">create 
@@ -209,21 +209,21 @@ Problem Statement			</td>
         quotes</span>, and <span bgcolor="#ffff00" style="background-color:#ffff00;">send 
         quotes</span> (via email).</i>
       </li>
-      <li style="margin-bottom:0;margin-top:0;margin-left:0;margin-right:0;">
+      <li style="margin-top:0;margin-left:0;margin-right:0;margin-bottom:0;">
         <i>A <span bgcolor="#00aaed" style="background-color:#00aaed;">user</span> 
         should be able to <span bgcolor="#ffff00" style="background-color:#ffff00;">search 
         for quotes by client name</span>, <span bgcolor="#ffff00" style="background-color:#ffff00;">quote 
         number</span> or <span bgcolor="#ffff00" style="background-color:#ffff00;">by 
         client contact number</span>.</i>
       </li>
-      <li style="margin-bottom:0;margin-top:0;margin-left:0;margin-right:0;">
+      <li style="margin-top:0;margin-left:0;margin-right:0;margin-bottom:0;">
         <i>Each <span bgcolor="#00ab9d" style="background-color:#00ab9d;">quote</span> 
         will have a uniquely identifying number and other details like; 
         customer name, job description, date of creation, finished and <span bgcolor="#00ab9d" style="background-color:#00ab9d;">press 
         formats</span>, <span bgcolor="#00ab9d" style="background-color:#00ab9d;">inks</span> 
         for both inserts and covers etc.</i>
       </li>
-      <li style="margin-bottom:0;margin-top:0;margin-left:0;margin-right:0;">
+      <li style="margin-top:0;margin-left:0;margin-right:0;margin-bottom:0;">
         <i>A <span bgcolor="#00aaed" style="background-color:#00aaed;">user</span> 
         on the <span bgcolor="#00aaed" style="background-color:#00aaed;">system</span> 
         should be able to <span bgcolor="#ffff00" style="background-color:#ffff00;">create 
@@ -234,18 +234,18 @@ Problem Statement			</td>
         requests and or reports on work orders</span> from the print 
         floor(i.e. when the order makes it to the print floor).</i>
       </li>
-      <li style="margin-bottom:0;margin-top:0;margin-left:0;margin-right:0;">
+      <li style="margin-top:0;margin-left:0;margin-right:0;margin-bottom:0;">
         <i>A <span bgcolor="#00aaed" style="background-color:#00aaed;">user</span> 
         should be able to <span bgcolor="#ffff00" style="background-color:#ffff00;">search 
         for work orders by order id, client name or the associated quote</span>.</i>
       </li>
-      <li style="margin-bottom:0;margin-top:0;margin-left:0;margin-right:0;">
+      <li style="margin-top:0;margin-left:0;margin-right:0;margin-bottom:0;">
         <i>A <span bgcolor="#00aaed" style="background-color:#00aaed;">user</span> 
         should be able to <span bgcolor="#ffff00" style="background-color:#ffff00;">view 
         the full details of any quote or work order</span>.</i>
       </li>
     </ol>
-    <p style="margin-bottom:.0001pt;margin-top:0;margin-left:0pt;margin-right:0pt;">
+    <p style="margin-top:0;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
       &nbsp;
     </p>
   </body></span>			</td>
