--- a/content/UseCase_8kqCjF6D_AAAAQjs.html
+++ b/content/UseCase_8kqCjF6D_AAAAQjs.html
@@ -94,6 +94,23 @@ Properties			</td>
 			<td>
 			</td>
 			<td>
+<span class="TableContent">Description</span>			</td>
+			<td>
+			</td>
+			<td>
+<span class="TableContent Documentation"><head>
+    
+  </head>
+  <body style="color:#000000;font-weight:normal;font-size:12px;font-family:Dialog;margin-left:0;margin-right:0;">
+    <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
+      To update/modify a quote on the system.
+    </p>
+  </body></span>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td>
+			</td>
+			<td>
 <span class="TableContent">Transit From</span>			</td>
 			<td>
 			</td>
@@ -124,7 +141,7 @@ Properties			</td>
 				</span>
 			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -134,7 +151,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">UC08</span>			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td>
 			</td>
 			<td>
@@ -144,7 +161,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">false</span>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -154,7 +171,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">false</span>			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td>
 			</td>
 			<td>
@@ -164,7 +181,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">false</span>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -176,7 +193,7 @@ Properties			</td>
 <a href="Stereotype_eIXptF6D_AAAAQs_.html" class="ItemLink">UseCase</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td>
 			</td>
 			<td>
@@ -186,7 +203,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">false</span>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -198,7 +215,7 @@ Properties			</td>
 <a href="Actor_GljCjF6D_AAAAQnV.html" class="ItemLink">user</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td>
 			</td>
 			<td>
@@ -206,9 +223,9 @@ Properties			</td>
 			<td>
 			</td>
 			<td>
-<span class="TableContent">Identify</span>			</td>
+<span class="TableContent">Design</span>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -216,7 +233,7 @@ Properties			</td>
 			<td>
 			</td>
 			<td>
-<span class="TableContent">Unspecified</span>			</td>
+<span class="TableContent">Medium</span>			</td>
 		</tr>
 	</table>
 	<table border="0" cellpadding="0" width="100%" cellspacing="0">
@@ -296,6 +313,106 @@ Relationships Summary			</td>
 &nbsp;<a href="UseCase_8kqCjF6D_AAAAQjs.html" class="ItemLink">update quote : Use Case</a>				</span>
 			</td>
 		</tr>
+		<tr class="TableRow2">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/Include.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/Include.png'); background-repeat: no-repeat;">
+					</div>
+&nbsp;<a href="UseCase_8kqCjF6D_AAAAQjs.html#KFxlQl6D.AAAARHf" class="ItemLink"> : Include</a>				</span>
+			</td>
+			<td class="TableCellSpaceHolder20Px">
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/UseCase.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/UseCase.png'); background-repeat: no-repeat;">
+					</div>
+&nbsp;<a href="UseCase_5RWCjF6D_AAAAQl7.html" class="ItemLink">search quote : Use Case</a>				</span>
+			</td>
+			<td class="TableCellSpaceHolder20Px">
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/UseCase.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/UseCase.png'); background-repeat: no-repeat;">
+					</div>
+&nbsp;<a href="UseCase_8kqCjF6D_AAAAQjs.html" class="ItemLink">update quote : Use Case</a>				</span>
+			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="TableCellSpaceHolder1PxTall">
+			</td>
+		</tr>
+		<tr>
+			<td class="TableFooter">
+			</td>
+		</tr>
+	</table>
+	<p>
+	</p>
+	<p>
+	</p>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="Category">
+Scenario			</td>
+		</tr>
+		<tr>
+			<td class="TableCellSpaceHolder5PxTall">
+			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td colSpan="4" class="TableHeaderLine">
+			</td>
+		</tr>
+		<tr>
+			<td colSpan="4" class="TableHeaderLine1">
+			</td>
+		</tr>
+		<tr class="TableHeader">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableHeaderText">Steps</span>			</td>
+		</tr>
+		<tr>
+			<td colSpan="2" class="TableHeaderLine2">
+			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent"><span class="FoeIndex">1.</span> User looks up quote.</span>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent"><span class="FoeIndex">2.</span> User clicks on <b>Edit</b>.</span>			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent">&nbsp;&nbsp;&nbsp;&nbsp;<span class="FoeIndex">2.1.</span> <span class="FoeControlSystem">SYSTEM</span> displays editable quote details.</span>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent"><span class="FoeIndex">3.</span> User modifies relevant data.</span>			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent"><span class="FoeIndex">4.</span> User clicks on <b>Update .</b></span>			</td>
+		</tr>
 	</table>
 	<table border="0" cellpadding="0" width="100%" cellspacing="0">
 		<tr>
@@ -352,7 +469,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">User</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
@@ -362,7 +479,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Medium</span>			</td>
 		</tr>
 		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
@@ -372,7 +489,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Base</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
@@ -382,7 +499,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Not started</span>			</td>
 		</tr>
 		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
@@ -392,7 +509,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Quote record must exist.</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
@@ -402,7 +519,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Quote record modification saved.</span>			</td>
 		</tr>
 		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
@@ -412,7 +529,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">D. Kafui Kpoh</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
@@ -679,6 +796,108 @@ Relationships Detail			</td>
 			</td>
 			<td>
 <span class="TableContent">false</span>			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="TableCellSpaceHolder1PxTall">
+			</td>
+		</tr>
+		<tr>
+			<td class="TableFooter">
+			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td style="height: 5px;">
+			</td>
+		</tr>
+	</table>
+	<p>
+	</p>
+<a name="KFxlQl6D.AAAARHf"></a>	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td colSpan="4" class="TableHeaderLine">
+			</td>
+		</tr>
+		<tr>
+			<td colSpan="4" class="TableHeaderLine1">
+			</td>
+		</tr>
+		<tr class="TableHeader">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td width="25%">
+<span class="TableHeaderText">Name</span>			</td>
+			<td class="TableCellSpaceHolder20Px">
+			</td>
+			<td>
+<span class="TableHeaderText">Value</span>			</td>
+		</tr>
+		<tr>
+			<td colSpan="4" class="TableHeaderLine2">
+			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">Name</span>			</td>
+			<td>
+			</td>
+			<td>
+<span class="TableContent"></span>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">From</span>			</td>
+			<td>
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/UseCase.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/UseCase.png'); background-repeat: no-repeat;">
+					</div>
+&nbsp;<a href="UseCase_5RWCjF6D_AAAAQl7.html" class="ItemLink">search quote : Use Case</a>				</span>
+			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">To</span>			</td>
+			<td>
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/UseCase.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/UseCase.png'); background-repeat: no-repeat;">
+					</div>
+&nbsp;<a href="UseCase_8kqCjF6D_AAAAQjs.html" class="ItemLink">update quote : Use Case</a>				</span>
+			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">Visibility</span>			</td>
+			<td>
+			</td>
+			<td>
+<span class="TableContent">Unspecified</span>			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">Stereotypes</span>			</td>
+			<td>
+			</td>
+			<td class="TableContent">
+				<span class="TableContent">
+<a href="Stereotype__yqZjF6D_AAAAQxh.html" class="ItemLink">Include</a>				</span>
+			</td>
 		</tr>
 	</table>
 	<table border="0" cellpadding="0" width="100%" cellspacing="0">
