--- a/content/UseCase_owCCjF6D_AAAAQia.html
+++ b/content/UseCase_owCCjF6D_AAAAQia.html
@@ -94,6 +94,23 @@ Properties			</td>
 			<td>
 			</td>
 			<td>
+<span class="TableContent">Description</span>			</td>
+			<td>
+			</td>
+			<td>
+<span class="TableContent Documentation"><head>
+    
+  </head>
+  <body style="color:#000000;font-weight:normal;font-size:12px;font-family:Dialog;margin-left:0;margin-right:0;">
+    <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
+      To create a quote on the system.
+    </p>
+  </body></span>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td>
+			</td>
+			<td>
 <span class="TableContent">Transit From</span>			</td>
 			<td>
 			</td>
@@ -124,7 +141,7 @@ Properties			</td>
 				</span>
 			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -134,7 +151,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">UC02</span>			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td>
 			</td>
 			<td>
@@ -144,7 +161,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">false</span>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -154,7 +171,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">false</span>			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td>
 			</td>
 			<td>
@@ -164,7 +181,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">false</span>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -176,7 +193,7 @@ Properties			</td>
 <a href="Stereotype_eIXptF6D_AAAAQs_.html" class="ItemLink">UseCase</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td>
 			</td>
 			<td>
@@ -186,7 +203,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">false</span>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -198,7 +215,7 @@ Properties			</td>
 <a href="Actor_GljCjF6D_AAAAQnV.html" class="ItemLink">user</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td>
 			</td>
 			<td>
@@ -206,9 +223,9 @@ Properties			</td>
 			<td>
 			</td>
 			<td>
-<span class="TableContent">Identify</span>			</td>
+<span class="TableContent">Design</span>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -216,7 +233,7 @@ Properties			</td>
 			<td>
 			</td>
 			<td>
-<span class="TableContent">Unspecified</span>			</td>
+<span class="TableContent">High</span>			</td>
 		</tr>
 	</table>
 	<table border="0" cellpadding="0" width="100%" cellspacing="0">
@@ -296,6 +313,220 @@ Relationships Summary			</td>
 &nbsp;<a href="UseCase_owCCjF6D_AAAAQia.html" class="ItemLink">create quote : Use Case</a>				</span>
 			</td>
 		</tr>
+		<tr class="TableRow2">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/Include.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/Include.png'); background-repeat: no-repeat;">
+					</div>
+&nbsp;<a href="UseCase_owCCjF6D_AAAAQia.html#Lu2Lgl6D.AAAASDD" class="ItemLink"> : Include</a>				</span>
+			</td>
+			<td class="TableCellSpaceHolder20Px">
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/UseCase.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/UseCase.png'); background-repeat: no-repeat;">
+					</div>
+&nbsp;<a href="UseCase_owCCjF6D_AAAAQia.html" class="ItemLink">create quote : Use Case</a>				</span>
+			</td>
+			<td class="TableCellSpaceHolder20Px">
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/UseCase.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/UseCase.png'); background-repeat: no-repeat;">
+					</div>
+&nbsp;<a href="UseCase_7RWCjF6D_AAAAQmH.html" class="ItemLink">send quote : Use Case</a>				</span>
+			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="TableCellSpaceHolder1PxTall">
+			</td>
+		</tr>
+		<tr>
+			<td class="TableFooter">
+			</td>
+		</tr>
+	</table>
+	<p>
+	</p>
+	<p>
+	</p>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="Category">
+Scenario			</td>
+		</tr>
+		<tr>
+			<td class="TableCellSpaceHolder5PxTall">
+			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td colSpan="4" class="TableHeaderLine">
+			</td>
+		</tr>
+		<tr>
+			<td colSpan="4" class="TableHeaderLine1">
+			</td>
+		</tr>
+		<tr class="TableHeader">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableHeaderText">Steps</span>			</td>
+		</tr>
+		<tr>
+			<td colSpan="2" class="TableHeaderLine2">
+			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent"><span class="FoeIndex">1.</span> User indicates intention to <b>create a quote</b>.</span>				<span style="float: right; margin-right: 5px;" id="5jkeAl6D.AAAASA9_showWireframeStates">
+<a href="javascript:showFoeWireframeStatesDialog('5jkeAl6D.AAAASA9_wireframeStates', '5jkeAl6D.AAAASA9_showWireframeStates')"><img src="../images/icons/foeSelectWireframes.png"></a>				</span>
+				<div style="width:300px; height:400px; position: fixed; _position: absolute; overflow: scroll; background-color: #F0F0F0; top: 100px; left: 100px; padding: 10px; display: none;" id="5jkeAl6D.AAAASA9_wireframeStates">
+					<table border="0" cellpadding="0" width="100%" cellspacing="0" style="text-align: center; border: none !important;">
+						<tr>
+							<td style="border: none !important; padding-top: 10px;">
+<a href="WFWebDiagram_COcoQl6D_AAAAQp9.html#aOcoQl6D.AAAAQqA"><img src="../images/User_indicates_inten_preview1.png" class="Image" style=" width: 280; border: none !important;"/>
+</a>							</td>
+						</tr>
+						<tr>
+							<td style="border: none !important;">
+<a href="WFWebDiagram_COcoQl6D_AAAAQp9.html#aOcoQl6D.AAAAQqA"><span class="TableContent ItemLink">User indicates intention to create a quote.</span></a>							</td>
+						</tr>
+					</table>
+				</div>
+			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent">&nbsp;&nbsp;&nbsp;&nbsp;<span class="FoeIndex">1.1.</span> <span class="FoeControlSystem">SYSTEM</span> prompts for job details</span>				<span style="float: right; margin-right: 5px;" id="77LeAl6D.AAAASBB_showWireframeStates">
+<a href="javascript:showFoeWireframeStatesDialog('77LeAl6D.AAAASBB_wireframeStates', '77LeAl6D.AAAASBB_showWireframeStates')"><img src="../images/icons/foeSelectWireframes.png"></a>				</span>
+				<div style="width:300px; height:400px; position: fixed; _position: absolute; overflow: scroll; background-color: #F0F0F0; top: 100px; left: 100px; padding: 10px; display: none;" id="77LeAl6D.AAAASBB_wireframeStates">
+					<table border="0" cellpadding="0" width="100%" cellspacing="0" style="text-align: center; border: none !important;">
+						<tr>
+							<td style="border: none !important; padding-top: 10px;">
+<a href="WFWebDiagram_COcoQl6D_AAAAQp9.html#PBVmQl6D.AAAAQzE"><img src="../images/prompts_for_job_deta_preview1.png" class="Image" style=" width: 280; border: none !important;"/>
+</a>							</td>
+						</tr>
+						<tr>
+							<td style="border: none !important;">
+<a href="WFWebDiagram_COcoQl6D_AAAAQp9.html#PBVmQl6D.AAAAQzE"><span class="TableContent ItemLink">prompts for job details.</span></a>							</td>
+						</tr>
+					</table>
+				</div>
+			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent"><span class="FoeIndex">2.</span> User inputs job details/data.</span>				<span style="float: right; margin-right: 5px;" id="7go.Al6D.AAAASBE_showWireframeStates">
+<a href="javascript:showFoeWireframeStatesDialog('7go.Al6D.AAAASBE_wireframeStates', '7go.Al6D.AAAASBE_showWireframeStates')"><img src="../images/icons/foeSelectWireframes.png"></a>				</span>
+				<div style="width:300px; height:400px; position: fixed; _position: absolute; overflow: scroll; background-color: #F0F0F0; top: 100px; left: 100px; padding: 10px; display: none;" id="7go.Al6D.AAAASBE_wireframeStates">
+					<table border="0" cellpadding="0" width="100%" cellspacing="0" style="text-align: center; border: none !important;">
+						<tr>
+							<td style="border: none !important; padding-top: 10px;">
+<a href="WFWebDiagram_COcoQl6D_AAAAQp9.html#PBVmQl6D.AAAAQzE"><img src="../images/User_inputs_job_deta_preview1.png" class="Image" style=" width: 280; border: none !important;"/>
+</a>							</td>
+						</tr>
+						<tr>
+							<td style="border: none !important;">
+<a href="WFWebDiagram_COcoQl6D_AAAAQp9.html#PBVmQl6D.AAAAQzE"><span class="TableContent ItemLink">prompts for job details.</span></a>							</td>
+						</tr>
+					</table>
+				</div>
+			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent">&nbsp;&nbsp;&nbsp;&nbsp;<span class="FoeIndex">2.1.</span> <span class="FoeControlSystem">SYSTEM</span> creates quote.</span>			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent">&nbsp;&nbsp;&nbsp;&nbsp;<span class="FoeIndex">2.2.</span> <span class="FoeControlSystem">SYSTEM</span> returns valid quote details.</span>				<span style="float: right; margin-right: 5px;" id="uYQjgl6D.AAAASBU_showWireframeStates">
+<a href="javascript:showFoeWireframeStatesDialog('uYQjgl6D.AAAASBU_wireframeStates', 'uYQjgl6D.AAAASBU_showWireframeStates')"><img src="../images/icons/foeSelectWireframes.png"></a>				</span>
+				<div style="width:300px; height:400px; position: fixed; _position: absolute; overflow: scroll; background-color: #F0F0F0; top: 100px; left: 100px; padding: 10px; display: none;" id="uYQjgl6D.AAAASBU_wireframeStates">
+					<table border="0" cellpadding="0" width="100%" cellspacing="0" style="text-align: center; border: none !important;">
+						<tr>
+							<td style="border: none !important; padding-top: 10px;">
+<a href="WFWebDiagram_COcoQl6D_AAAAQp9.html#aOcoQl6D.AAAAQqA"><img src="../images/returns_valid_quote_preview1.png" class="Image" style=" width: 280; border: none !important;"/>
+</a>							</td>
+						</tr>
+						<tr>
+							<td style="border: none !important;">
+<a href="WFWebDiagram_COcoQl6D_AAAAQp9.html#aOcoQl6D.AAAAQqA"><span class="TableContent ItemLink">User indicates intention to create a quote.</span></a>							</td>
+						</tr>
+					</table>
+				</div>
+			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="TableCellSpaceHolder1PxTall">
+			</td>
+		</tr>
+		<tr>
+			<td class="TableFooter">
+			</td>
+		</tr>
+	</table>
+	<p>
+	</p>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="Category">
+Extension			</td>
+		</tr>
+		<tr>
+			<td class="TableCellSpaceHolder5PxTall">
+			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td colSpan="4" class="TableHeaderLine">
+			</td>
+		</tr>
+		<tr>
+			<td colSpan="4" class="TableHeaderLine1">
+			</td>
+		</tr>
+		<tr class="TableHeader">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableHeaderText">Steps</span>			</td>
+		</tr>
+		<tr>
+			<td colSpan="2" class="TableHeaderLine2">
+			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent"><span class="FoeIndex">2.a.</span> Job detail is incomplete.</span>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent">&nbsp;&nbsp;&nbsp;&nbsp;<span class="FoeIndex">1.</span> <span class="FoeControlSystem">SYSTEM</span> highlight fields and prompt: "Data required"</span>			</td>
+		</tr>
 	</table>
 	<table border="0" cellpadding="0" width="100%" cellspacing="0">
 		<tr>
@@ -352,7 +583,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">User</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
@@ -362,7 +593,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Medium</span>			</td>
 		</tr>
 		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
@@ -372,7 +603,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Base</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
@@ -382,7 +613,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Not started</span>			</td>
 		</tr>
 		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
@@ -392,7 +623,9 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">User account and company profile must exist.
+Machine profiles must exist.
+</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
@@ -402,7 +635,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Quote is created.</span>			</td>
 		</tr>
 		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
@@ -412,7 +645,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">D. Kafui Kpoh</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
@@ -435,6 +668,68 @@ Details			</td>
 			</td>
 		</tr>
 	</table>
+	<p>
+	</p>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="Category">
+Sub Diagrams			</td>
+		</tr>
+		<tr>
+			<td class="TableCellSpaceHolder5PxTall">
+			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td colSpan="4" class="TableHeaderLine">
+			</td>
+		</tr>
+		<tr>
+			<td colSpan="4" class="TableHeaderLine1">
+			</td>
+		</tr>
+		<tr class="TableHeader">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td width="25%">
+<span class="TableHeaderText">Name</span>			</td>
+			<td class="TableCellSpaceHolder20Px">
+			</td>
+			<td>
+<span class="TableHeaderText">Description</span>			</td>
+		</tr>
+		<tr>
+			<td colSpan="4" class="TableHeaderLine2">
+			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td>
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/ActivityDiagram.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/ActivityDiagram.png'); background-repeat: no-repeat;">
+					</div>
+&nbsp;<a href="ActivityDiagram_DHbLgl6D_AAAASDd.html" class="ItemLink">create quote : Activity Diagram</a>				</span>
+			</td>
+			<td>
+			</td>
+			<td>
+<span class="TableContent Documentation"></span>			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="TableCellSpaceHolder1PxTall">
+			</td>
+		</tr>
+		<tr>
+			<td class="TableFooter">
+			</td>
+		</tr>
+	</table>
+	<p>
+	</p>
 	<p>
 	</p>
 	<table border="0" cellpadding="0" width="100%" cellspacing="0">
@@ -679,6 +974,108 @@ Relationships Detail			</td>
 			</td>
 			<td>
 <span class="TableContent">false</span>			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="TableCellSpaceHolder1PxTall">
+			</td>
+		</tr>
+		<tr>
+			<td class="TableFooter">
+			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td style="height: 5px;">
+			</td>
+		</tr>
+	</table>
+	<p>
+	</p>
+<a name="Lu2Lgl6D.AAAASDD"></a>	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td colSpan="4" class="TableHeaderLine">
+			</td>
+		</tr>
+		<tr>
+			<td colSpan="4" class="TableHeaderLine1">
+			</td>
+		</tr>
+		<tr class="TableHeader">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td width="25%">
+<span class="TableHeaderText">Name</span>			</td>
+			<td class="TableCellSpaceHolder20Px">
+			</td>
+			<td>
+<span class="TableHeaderText">Value</span>			</td>
+		</tr>
+		<tr>
+			<td colSpan="4" class="TableHeaderLine2">
+			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">Name</span>			</td>
+			<td>
+			</td>
+			<td>
+<span class="TableContent"></span>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">From</span>			</td>
+			<td>
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/UseCase.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/UseCase.png'); background-repeat: no-repeat;">
+					</div>
+&nbsp;<a href="UseCase_owCCjF6D_AAAAQia.html" class="ItemLink">create quote : Use Case</a>				</span>
+			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">To</span>			</td>
+			<td>
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/UseCase.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/UseCase.png'); background-repeat: no-repeat;">
+					</div>
+&nbsp;<a href="UseCase_7RWCjF6D_AAAAQmH.html" class="ItemLink">send quote : Use Case</a>				</span>
+			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">Visibility</span>			</td>
+			<td>
+			</td>
+			<td>
+<span class="TableContent">Unspecified</span>			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">Stereotypes</span>			</td>
+			<td>
+			</td>
+			<td class="TableContent">
+				<span class="TableContent">
+<a href="Stereotype__yqZjF6D_AAAAQxh.html" class="ItemLink">Include</a>				</span>
+			</td>
 		</tr>
 	</table>
 	<table border="0" cellpadding="0" width="100%" cellspacing="0">
