--- a/content/UseCase_xQCCjF6D_AAAAQiM.html
+++ b/content/UseCase_xQCCjF6D_AAAAQiM.html
@@ -102,7 +102,7 @@ Properties			</td>
     
   </head>
   <body style="color:#000000;font-weight:normal;font-size:12px;font-family:Dialog;margin-left:0;margin-right:0;">
-    <p style="margin-bottom:.0001pt;margin-top:0pt;margin-left:0pt;margin-right:0pt;">
+    <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
       To create an account on the Print master system
     </p>
   </body></span>			</td>
