--- a/content/all_diagrams_menu.html
+++ b/content/all_diagrams_menu.html
@@ -50,11 +50,31 @@
 			<td style="width: 24px">
 			</td>
 			<td style="width: 18px">
+				<div style="width: 18px !important;height: 18px !important;background-image:url(../images/icons/ActivityDiagram.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/ActivityDiagram.png'); background-repeat: no-repeat;"/>			</td>
+			<td style="width: 5px">
+			</td>
+			<td width="*" class="TableContent">
+<a href="ActivityDiagram_DHbLgl6D_AAAASDd.html" class="ItemLink" target="_content_pane">create quote</a>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td style="width: 24px">
+			</td>
+			<td style="width: 18px">
 				<div style="width: 18px !important;height: 18px !important;background-image:url(../images/icons/TextualAnalysis.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/TextualAnalysis.png'); background-repeat: no-repeat;"/>			</td>
 			<td style="width: 5px">
 			</td>
 			<td width="*" class="TableContent">
 <a href="TextualAnalysis_CNoZtF6D_AAAAQyZ.html" class="ItemLink" target="_content_pane">Textual Analysis - PrintMaster</a>			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td style="width: 24px">
+			</td>
+			<td style="width: 18px">
+				<div style="width: 18px !important;height: 18px !important;background-image:url(../images/icons/WFWebDiagram.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/WFWebDiagram.png'); background-repeat: no-repeat;"/>			</td>
+			<td style="width: 5px">
+			</td>
+			<td width="*" class="TableContent">
+<a href="WFWebDiagram_COcoQl6D_AAAAQp9.html" class="ItemLink" target="_content_pane">create quote</a>			</td>
 		</tr>
 	</table>
 	<table border="0" cellpadding="0" width="100%" cellspacing="0">
