--- a/content/all_models_menu.html
+++ b/content/all_models_menu.html
@@ -60,13 +60,23 @@
 			<td style="width: 24px">
 			</td>
 			<td style="width: 18px">
+				<div style="width: 18px !important;height: 18px !important;background-image:url(../images/icons/ActivityVerticalSwimlane.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/ActivityVerticalSwimlane.png'); background-repeat: no-repeat;"/>			</td>
+			<td style="width: 5px">
+			</td>
+			<td width="*" class="TableContent">
+<a href="ActivitySwimlane2_pXsbgl6D_AAAASDo.html" class="ItemLink" target="_content_pane">Swimlane2 : Swimlane</a>			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td style="width: 24px">
+			</td>
+			<td style="width: 18px">
 				<div style="width: 18px !important;height: 18px !important;background-image:url(../images/icons/Action.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/Action.png'); background-repeat: no-repeat;"/>			</td>
 			<td style="width: 5px">
 			</td>
 			<td width="*" class="TableContent">
 <a href="ActivityAction_pnEDvF6D_AAAARw0.html" class="ItemLink" target="_content_pane">Request account : Action</a>			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td style="width: 24px">
 			</td>
 			<td style="width: 18px">
@@ -76,7 +86,7 @@
 			<td width="*" class="TableContent">
 <a href="ActivityAction_tB8DvF6D_AAAARw9.html" class="ItemLink" target="_content_pane">Create user : Action</a>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td style="width: 24px">
 			</td>
 			<td style="width: 18px">
@@ -86,7 +96,7 @@
 			<td width="*" class="TableContent">
 <a href="ActivityAction_FbFjvF6D_AAAARz1.html" class="ItemLink" target="_content_pane">Enter addresses : Action</a>			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td style="width: 24px">
 			</td>
 			<td style="width: 18px">
@@ -96,7 +106,7 @@
 			<td width="*" class="TableContent">
 <a href="ActivityAction_Qz1jvF6D_AAAARz_.html" class="ItemLink" target="_content_pane">Create addresses : Action</a>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td style="width: 24px">
 			</td>
 			<td style="width: 18px">
@@ -106,7 +116,7 @@
 			<td width="*" class="TableContent">
 <a href="ActivityAction_qfLjvF6D_AAAAR0T.html" class="ItemLink" target="_content_pane">Enter company info : Action</a>			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td style="width: 24px">
 			</td>
 			<td style="width: 18px">
@@ -116,7 +126,7 @@
 			<td width="*" class="TableContent">
 <a href="ActivityAction_8JnjvF6D_AAAAR0c.html" class="ItemLink" target="_content_pane">Create company profile : Action</a>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td style="width: 24px">
 			</td>
 			<td style="width: 18px">
@@ -126,7 +136,7 @@
 			<td width="*" class="TableContent">
 <a href="ActivityAction_iOvjvF6D_AAAAR0l.html" class="ItemLink" target="_content_pane">Enter credit/debit/MoMo info : Action</a>			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td style="width: 24px">
 			</td>
 			<td style="width: 18px">
@@ -136,7 +146,7 @@
 			<td width="*" class="TableContent">
 <a href="ActivityAction_W1KTvF6D_AAAAR0y.html" class="ItemLink" target="_content_pane">Create account : Action</a>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td style="width: 24px">
 			</td>
 			<td style="width: 18px">
@@ -146,7 +156,7 @@
 			<td width="*" class="TableContent">
 <a href="ActivityAction_A06TvF6D_AAAAR07.html" class="ItemLink" target="_content_pane">Verify payment info : Action</a>			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td style="width: 24px">
 			</td>
 			<td style="width: 18px">
@@ -156,7 +166,7 @@
 			<td width="*" class="TableContent">
 <a href="ActivityAction_zKOTvF6D_AAAAR1I.html" class="ItemLink" target="_content_pane">Return account details : Action</a>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td style="width: 24px">
 			</td>
 			<td style="width: 18px">
@@ -165,6 +175,76 @@
 			</td>
 			<td width="*" class="TableContent">
 <a href="ActivityFinalNode_U2VLvF6D_AAAAR5k.html" class="ItemLink" target="_content_pane"> : Activity Final Node</a>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td style="width: 24px">
+			</td>
+			<td style="width: 18px">
+				<div style="width: 18px !important;height: 18px !important;background-image:url(../images/icons/Action.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/Action.png'); background-repeat: no-repeat;"/>			</td>
+			<td style="width: 5px">
+			</td>
+			<td width="*" class="TableContent">
+<a href="ActivityAction_5F_bgl6D_AAAASEF.html" class="ItemLink" target="_content_pane">Request Quote : Action</a>			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td style="width: 24px">
+			</td>
+			<td style="width: 18px">
+				<div style="width: 18px !important;height: 18px !important;background-image:url(../images/icons/Action.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/Action.png'); background-repeat: no-repeat;"/>			</td>
+			<td style="width: 5px">
+			</td>
+			<td width="*" class="TableContent">
+<a href="ActivityAction_azS7gl6D_AAAASEW.html" class="ItemLink" target="_content_pane">Input job details : Action</a>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td style="width: 24px">
+			</td>
+			<td style="width: 18px">
+				<div style="width: 18px !important;height: 18px !important;background-image:url(../images/icons/Action.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/Action.png'); background-repeat: no-repeat;"/>			</td>
+			<td style="width: 5px">
+			</td>
+			<td width="*" class="TableContent">
+<a href="ActivityAction_D0J7gl6D_AAAASEz.html" class="ItemLink" target="_content_pane">Create quote : Action</a>			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td style="width: 24px">
+			</td>
+			<td style="width: 18px">
+				<div style="width: 18px !important;height: 18px !important;background-image:url(../images/icons/Action.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/Action.png'); background-repeat: no-repeat;"/>			</td>
+			<td style="width: 5px">
+			</td>
+			<td width="*" class="TableContent">
+<a href="ActivityAction_f677gl6D_AAAASFQ.html" class="ItemLink" target="_content_pane">Return quote details : Action</a>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td style="width: 24px">
+			</td>
+			<td style="width: 18px">
+				<div style="width: 18px !important;height: 18px !important;background-image:url(../images/icons/DecisionNode.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/DecisionNode.png'); background-repeat: no-repeat;"/>			</td>
+			<td style="width: 5px">
+			</td>
+			<td width="*" class="TableContent">
+<a href="DecisionNode_Vx0Hgl6D_AAAASFr.html" class="ItemLink" target="_content_pane">Send? : Decision Node</a>			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td style="width: 24px">
+			</td>
+			<td style="width: 18px">
+				<div style="width: 18px !important;height: 18px !important;background-image:url(../images/icons/Activity.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/Activity.png'); background-repeat: no-repeat;"/>			</td>
+			<td style="width: 5px">
+			</td>
+			<td width="*" class="TableContent">
+<a href="Activity_vRbngl6D_AAAASIE.html" class="ItemLink" target="_content_pane">Send Quote : Activity</a>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td style="width: 24px">
+			</td>
+			<td style="width: 18px">
+				<div style="width: 18px !important;height: 18px !important;background-image:url(../images/icons/ActivityFinial.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/ActivityFinial.png'); background-repeat: no-repeat;"/>			</td>
+			<td style="width: 5px">
+			</td>
+			<td width="*" class="TableContent">
+<a href="ActivityFinalNode_FR43gl6D_AAAASJy.html" class="ItemLink" target="_content_pane"> : Activity Final Node</a>			</td>
 		</tr>
 		<tr class="TableRow1">
 			<td style="width: 24px">
