--- a/content/project_content.html
+++ b/content/project_content.html
@@ -81,19 +81,19 @@
     
   </head>
   <body style="color:#000000;font-weight:normal;font-size:12px;font-family:Dialog;margin-left:0;margin-right:0;">
-    <p style="margin-bottom:.0001pt;margin-top:0pt;margin-left:0pt;margin-right:0pt;">
+    <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
       &nbsp;
     </p>
     <div class="page" title="Page 3">
       <div class="section" style="background-color:rgb(100.000000%, 100.000000%, 100.000000%);">
         <div class="layoutArea">
           <div class="column">
-            <p style="margin-bottom:.0001pt;margin-top:0pt;margin-left:0pt;margin-right:0pt;">
+            <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
               <span style="color:rgb(0.000000%, 25.490200%, 37.254900%);font-weight:700;font-size:12.000000pt;font-family:Calibri;"><font face="Calibri" size="12.000000pt" style="color:#000000;font-size:12.000000pt;"><b>This 
               project will aid in automating the process of estimating and 
               managing work orders in the print and/or publishing industries. </b></font></span>
             </p>
-            <p style="margin-bottom:.0001pt;margin-top:0pt;margin-left:0pt;margin-right:0pt;">
+            <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
               <span style="color:rgb(0.000000%, 25.490200%, 37.254900%);font-weight:700;font-size:12.000000pt;font-family:Calibri;"><font face="Calibri" size="12.000000pt" style="color:#000000;font-size:12.000000pt;"><b>This 
               system will meet the current standards of cloud native 
               applications, and more importantly facilitate the ease and 
