--- a/content/UseCase_mwCCjF6D_AAAAQim.html
+++ b/content/UseCase_mwCCjF6D_AAAAQim.html
@@ -94,6 +94,23 @@ Properties			</td>
 			<td>
 			</td>
 			<td>
+<span class="TableContent">Description</span>			</td>
+			<td>
+			</td>
+			<td>
+<span class="TableContent Documentation"><head>
+    
+  </head>
+  <body style="color:#000000;font-weight:normal;font-size:12px;font-family:Dialog;margin-left:0;margin-right:0;">
+    <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
+      To create a work order on the system.
+    </p>
+  </body></span>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td>
+			</td>
+			<td>
 <span class="TableContent">Transit From</span>			</td>
 			<td>
 			</td>
@@ -124,7 +141,7 @@ Properties			</td>
 				</span>
 			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -134,7 +151,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">UC03</span>			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td>
 			</td>
 			<td>
@@ -144,7 +161,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">false</span>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -154,7 +171,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">false</span>			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td>
 			</td>
 			<td>
@@ -164,7 +181,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">false</span>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -176,7 +193,7 @@ Properties			</td>
 <a href="Stereotype_eIXptF6D_AAAAQs_.html" class="ItemLink">UseCase</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td>
 			</td>
 			<td>
@@ -186,7 +203,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">false</span>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -198,7 +215,7 @@ Properties			</td>
 <a href="Actor_GljCjF6D_AAAAQnV.html" class="ItemLink">user</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td>
 			</td>
 			<td>
@@ -208,7 +225,7 @@ Properties			</td>
 			<td>
 <span class="TableContent">Identify</span>			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td>
 			</td>
 			<td>
@@ -216,7 +233,7 @@ Properties			</td>
 			<td>
 			</td>
 			<td>
-<span class="TableContent">Unspecified</span>			</td>
+<span class="TableContent">High</span>			</td>
 		</tr>
 	</table>
 	<table border="0" cellpadding="0" width="100%" cellspacing="0">
@@ -352,7 +369,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">User</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
@@ -362,7 +379,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Medium</span>			</td>
 		</tr>
 		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
@@ -372,7 +389,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Base</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
@@ -382,7 +399,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Not started</span>			</td>
 		</tr>
 		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
