--- a/content/diagram_navigator.html
+++ b/content/diagram_navigator.html
@@ -123,6 +123,18 @@ Print_Master System		</span>
 			<td>
 <a href="TextualAnalysis_menu.html" class="CategoryItemLink" target="_menu_pane">Textual Analysis</a>			</td>
 		</tr>
+		<tr class="TableRow1">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td class="TableCellSpaceHolder18Px">
+				<div style="width: 18px !important;height: 18px !important;background-image:url(../images/icons/WFWebDiagram_folder.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/WFWebDiagram_folder.png'); background-repeat: no-repeat;">
+				</div>
+			</td>
+			<td class="TableCellSpaceHolder5Px">
+			</td>
+			<td>
+<a href="WFWebDiagram_menu.html" class="CategoryItemLink" target="_menu_pane">Web Wireframe</a>			</td>
+		</tr>
 	</table>
 	<table border="0" cellpadding="0" width="100%" cellspacing="0">
 		<tr>
